---
source: src/config/config_file/mise_toml.rs
expression: "replace_path(&format!(\"{:#?}\", cf.to_tool_request_set().unwrap()))"
---
ToolRequestSet {
    tools: {
        BackendArg(terraform): [
            Version {
                backend: BackendArg(terraform),
                version: "1.0.0",
                options: ToolOptions {
                    core: CoreToolOptions {
                        os: None,
                        depends: None,
                        install_env: {},
                        lazy: None,
                        lazy_bins: [],
                        auto_update: None,
                    },
                    opts: RawBackendOptions {
                        values: {},
                    },
                },
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                lockfile_scope: Default,
            },
        ],
        BackendArg(node): [
            Version {
                backend: BackendArg(node),
                version: "18",
                options: ToolOptions {
                    core: CoreToolOptions {
                        os: None,
                        depends: None,
                        install_env: {},
                        lazy: None,
                        lazy_bins: [],
                        auto_update: None,
                    },
                    opts: RawBackendOptions {
                        values: {},
                    },
                },
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                lockfile_scope: Default,
            },
            Prefix {
                backend: BackendArg(node),
                prefix: "20",
                options: ToolOptions {
                    core: CoreToolOptions {
                        os: None,
                        depends: None,
                        install_env: {},
                        lazy: None,
                        lazy_bins: [],
                        auto_update: None,
                    },
                    opts: RawBackendOptions {
                        values: {},
                    },
                },
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                lockfile_scope: Default,
            },
            Ref {
                backend: BackendArg(node),
                ref_: "master",
                ref_type: "ref",
                options: ToolOptions {
                    core: CoreToolOptions {
                        os: None,
                        depends: None,
                        install_env: {},
                        lazy: None,
                        lazy_bins: [],
                        auto_update: None,
                    },
                    opts: RawBackendOptions {
                        values: {},
                    },
                },
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                lockfile_scope: Default,
            },
            Path {
                backend: BackendArg(node),
                path: "~/.nodes/18",
                options: ToolOptions {
                    core: CoreToolOptions {
                        os: None,
                        depends: None,
                        install_env: {},
                        lazy: None,
                        lazy_bins: [],
                        auto_update: None,
                    },
                    opts: RawBackendOptions {
                        values: {},
                    },
                },
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                lockfile_scope: Default,
            },
        ],
        BackendArg(jq): [
            Prefix {
                backend: BackendArg(jq),
                prefix: "1.6",
                options: ToolOptions {
                    core: CoreToolOptions {
                        os: None,
                        depends: None,
                        install_env: {},
                        lazy: None,
                        lazy_bins: [],
                        auto_update: None,
                    },
                    opts: RawBackendOptions {
                        values: {},
                    },
                },
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                lockfile_scope: Default,
            },
        ],
        BackendArg(shellcheck): [
            Version {
                backend: BackendArg(shellcheck),
                version: "0.9.0",
                options: ToolOptions {
                    core: CoreToolOptions {
                        os: None,
                        depends: None,
                        install_env: {},
                        lazy: None,
                        lazy_bins: [],
                        auto_update: None,
                    },
                    opts: RawBackendOptions {
                        values: {},
                    },
                },
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                lockfile_scope: Default,
            },
        ],
        BackendArg(python): [
            Version {
                backend: BackendArg(python),
                version: "3.10.0",
                options: ToolOptions {
                    core: CoreToolOptions {
                        os: None,
                        depends: None,
                        install_env: {},
                        lazy: None,
                        lazy_bins: [],
                        auto_update: None,
                    },
                    opts: RawBackendOptions {
                        values: {
                            "venv": String(
                                ".venv",
                            ),
                        },
                    },
                },
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                lockfile_scope: Default,
            },
            Version {
                backend: BackendArg(python),
                version: "3.9.0",
                options: ToolOptions {
                    core: CoreToolOptions {
                        os: None,
                        depends: None,
                        install_env: {},
                        lazy: None,
                        lazy_bins: [],
                        auto_update: None,
                    },
                    opts: RawBackendOptions {
                        values: {},
                    },
                },
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                lockfile_scope: Default,
            },
        ],
    },
    sources: {
        BackendArg(jq): MiseToml(
            "~/fixtures/.mise.toml",
        ),
        BackendArg(node): MiseToml(
            "~/fixtures/.mise.toml",
        ),
        BackendArg(python): MiseToml(
            "~/fixtures/.mise.toml",
        ),
        BackendArg(shellcheck): MiseToml(
            "~/fixtures/.mise.toml",
        ),
        BackendArg(terraform): MiseToml(
            "~/fixtures/.mise.toml",
        ),
    },
    unknown_tools: [],
}
